--- a/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Two_Sicilies_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
 ### Ideas ###
-SIC_BM_3:0 "Black Monday hits the Mezzogiorno"
-SIC_BM_2:0 "The Worst is Over"
+SIC_BM_3:0 "검은 월요일이 메초조르노를 강타하다"
+SIC_BM_2:0 "최악의 사태는 끝났다"
 SIC_BM_1:0 "Austerity Measures"
 SIC_bacc_on_tracc:0 "Thriving Economy"
 SIC_modernized_army:0 "Messe's Reforms"
@@ -75,7 +75,7 @@ SIC_elections_SC:0 "DC won the elections"
 SIC_elections_NP:0 "IDS won the elections"
 SIC_owns_italy:0 "Liberated the North"
 SIC_confed:0 "Old Order Restored"
-SIC_empire:0 "Avanti Italia!"
+SIC_empire:0 "이탈리아여 전진하라!"
 SIC_the_organic_kingdom_established:0 "Integralist have taken control"
 SIC_democracy_prevails:0 "Democracy prevails in the Kingdom"
 SIC_italian_empire_founded:0 "The Italian Empire has been founded"
@@ -85,27 +85,27 @@ SIC_asymmetrical_warfare_effect:0 "Enables §HUrban Warfare Trainng§!\n§HAll l
 SIC_fate_of_italy_tooltip:0 "The fate of Italy shall be decided once we defeat the Socialist Republic in the North."
 
 ### Cosmetic Tags ###
-IES_social_democrat:0 "Italian Empire"
-IES_social_democrat_ADJ:0 "Italian"
-IES_social_democrat_DEF:0 "Italian Empire"
-IES_social_liberal:0 "Italian Empire"
-IES_social_liberal_ADJ:0 "Italian"
-IES_social_liberal_DEF:0 "Italian Empire"
-IES_market_liberal:0 "Italian Empire"
-IES_market_liberal_ADJ:0 "Italian"
-IES_market_liberal_DEF:0 "Italian Empire"
-IES_social_conservative:0 "Italian Empire"
-IES_social_conservative_ADJ:0 "Italian"
-IES_social_conservative_DEF:0 "Italian Empire"
-IES_authoritarian_democrat:0 "Italian Empire"
-IES_authoritarian_democrat_ADJ:0 "Italian"
-IES_authoritarian_democrat_DEF:0 "Italian Empire"
-IES_paternal_autocrat:0 "Italian Empire"
-IES_paternal_autocrat_ADJ:0 "Italian"
-IES_paternal_autocrat_DEF:0 "Italian Empire"
-IES_national_populist:0 "Italian Empire"
-IES_national_populist_ADJ:0 "Italian"
-IES_national_populist_DEF:0 "Italian Empire"
+IES_social_democrat:0 "이탈리아 제국"
+IES_social_democrat_ADJ:0 "이탈리아"
+IES_social_democrat_DEF:0 "이탈리아 제국"
+IES_social_liberal:0 "이탈리아 제국"
+IES_social_liberal_ADJ:0 "이탈리아"
+IES_social_liberal_DEF:0 "이탈리아 제국"
+IES_market_liberal:0 "이탈리아 제국"
+IES_market_liberal_ADJ:0 "이탈리아"
+IES_market_liberal_DEF:0 "이탈리아 제국"
+IES_social_conservative:0 "이탈리아 제국"
+IES_social_conservative_ADJ:0 "이탈리아"
+IES_social_conservative_DEF:0 "이탈리아 제국"
+IES_authoritarian_democrat:0 "이탈리아 제국"
+IES_authoritarian_democrat_ADJ:0 "이탈리아"
+IES_authoritarian_democrat_DEF:0 "이탈리아 제국"
+IES_paternal_autocrat:0 "이탈리아 제국"
+IES_paternal_autocrat_ADJ:0 "이탈리아"
+IES_paternal_autocrat_DEF:0 "이탈리아 제국"
+IES_national_populist:0 "이탈리아 제국"
+IES_national_populist_ADJ:0 "이탈리아"
+IES_national_populist_DEF:0 "이탈리아 제국"
 
 ### Parties ###
 SIC_totalist_party:0 "Italia Unita"
@@ -130,17 +130,17 @@ SIC_national_populist_party:0 "IDS"
 SIC_national_populist_party_long:0 "Integralisti 'e Ddoje Sicilie"
 
 ### Cosmetic Tags ###
-IES_social_democrat:0 "Italian Empire"
-IES_social_liberal:0 "Italian Empire"
-IES_market_liberal:0 "Italian Empire"
-IES_social_conservative:0 "Italian Empire"
-IES_authoritarian_democrat:0 "Italian Empire"
-IES_paternal_autocrat:0 "Italian Empire"
-IES_national_populist:0 "Italian Empire"
+IES_social_democrat:0 "이탈리아 제국"
+IES_social_liberal:0 "이탈리아 제국"
+IES_market_liberal:0 "이탈리아 제국"
+IES_social_conservative:0 "이탈리아 제국"
+IES_authoritarian_democrat:0 "이탈리아 제국"
+IES_paternal_autocrat:0 "이탈리아 제국"
+IES_national_populist:0 "이탈리아 제국"
 
 ### Military Focuses ###
-SIC_armed_forces:0 "Royal Armed Forces"
-SIC_armed_forces_desc:0 "Ever since the devastating civil war that tore Italy a part, the remnants of the Italian Federal Army in south were re-organized into the Royal Army of the Two Sicilies. However, this reorganization is not yet complete and steps must be taken in that direction"
+SIC_armed_forces:0 "왕립군"
+SIC_armed_forces_desc:0 "이탈리아를 분열시킨 파괴적인 내전 이후, 남쪽에 있는 이탈리아 연방군의 잔재들은 양시칠리아 왕립군으로 재편성되었습니다. 그러나 이 조직 개편은 아직 완료되지 않았으므로, 해당 방향으로 조치를 취해야 합니다."
 SIC_he_atacc:0 "Take the Fight to Them!"
 SIC_he_atacc_desc:0 "The answer to the Syndicalist question is simple: Wait for an opening an attack! Liberate all of Italy from these treacherous french snakes before other envious powers do so!"
 SIC_sicilian_auto_industry:0 "Sicilian Automotive Industry"
@@ -181,10 +181,10 @@ SIC_never_surrender:0 "Never Surrender!"
 SIC_never_surrender_desc:0 "We shall go on to the end. We shall fight in this island of Sicily, we shall fight on the seas and oceans, we shall fight with growing confidence and growing strength in the air, we shall defend our island, whatever the cost may be. We shall fight on the beaches, we shall fight on the landing grounds, we shall fight in the fields and in the streets, we shall fight in the hills; we shall never surrender"
 SIC_tanks_a_lot:0 "ANFA Expansion Effort"
 SIC_tanks_a_lot_desc:0 "Economical incentives and legal protections must be put into place to ensure our tank manufacturing doesnt stay behind that of our foul foes"
-SIC_modern_army:0 "The Army of Sicily"
+SIC_modern_army:0 "시칠리아 육군"
 SIC_modern_army_desc:0 "The army of our Kingdom should be a fighting force like no other, modern, well equipped and brave. The pride of the nation will save it's soul!"
 ### Industry Focuses ###
-SIC_development:0 "The Future of Mezzogiorno"
+SIC_development:0 "메초조르노의 미래"
 SIC_development_desc:0 "Our status of being the weaithest of the Italian nations is not due to our actual wealth, but due to how the other parts of the peninsula's assets are either war torn or owned by foriegner investors. We are effectively the last hope of Italian industry."
 SIC_agrarian_issue:0 "The Agarian Question"
 SIC_agrarian_issue_desc:0 "Ever since the invasion of the Lombards, our lands have been dominated by large scale landholders. The situation only got worse through the last decades and centuries, and very few men hold almost all the land, creating significant tension in rural areas of our Kingdom"
