--- a/Kaiserreich Korean Translation/localisation/KR_Spartakiade_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Spartakiade_l_english.yml
@@ -1,82 +1,82 @@
 l_english:
 ### Spartakiade Opinion Modifiers ###
-spartikade_bomb:0 "Loyalist Bombings"
+spartikade_bomb:0 "왕당파의 폭탄"
 
 ### Spartakiade ###
-Spartakiade.1.t:0 "The 1937 Spartakiade!"
-Spartakiade.1.paris.d:0 "The first Spartakiade's opening ceremony was held in Paris and attended by dignitaries and athletes from around the socialist world. The French team carried the torch, the British team the hammer, and the other teams carried the pieces of the cog to the location where they were to be assembled. When placed together, they formed the international symbol of syndicalism!"
-Spartakiade.1.dijon.d:0 "The first Spartakiade's opening ceremony was held in Dijon and attended by dignitaries and athletes from around the socialist world. The French team carried the torch, the British team the hammer, and the other teams carried the pieces of the cog to the location where they were to be assembled. When placed together, they formed the international symbol of syndicalism!"
-Spartakiade.1.bordeaux.d:0 "The first Spartakiade's opening ceremony was held in Bordeaux and attended by dignitaries and athletes from around the socialist world. The French team carried the torch, the British team the hammer, and the other teams carried the pieces of the cog to the location where they were to be assembled. When placed together, they formed the international symbol of syndicalism!"
-Spartakiade.1.marseille.d:0 "The first Spartakiade's opening ceremony was held in Marseille and attended by dignitaries and athletes from around the socialist world. The French team carried the torch, the British team the hammer, and the other teams carried the pieces of the cog to the location where they were to be assembled. When placed together, they formed the international symbol of syndicalism!"
-Spartakiade.1.london.d:0 "The first Spartakiade's opening ceremony was held in London and attended by dignitaries and athletes from around the socialist world. The British team carried the torch, the French team the hammer, and the other teams carried the pieces of the cog to the location where they were to be assembled. When placed together, they formed the international symbol of syndicalism!"
-Spartakiade.1.edinburgh.d:0 "The first Spartakiade's opening ceremony was held in Edinburgh and attended by dignitaries and athletes from around the socialist world. The British team carried the torch, the French team the hammer, and the other teams carried the pieces of the cog to the location where they were to be assembled. When placed together, they formed the international symbol of syndicalism!"
-Spartakiade.1.manchester.d:0 "The first Spartakiade's opening ceremony was held in Manchester and attended by dignitaries and athletes from around the socialist world. The British team carried the torch, the French team the hammer, and the other teams carried the pieces of the cog to the location where they were to be assembled. When placed together, they formed the international symbol of syndicalism!"
-Spartakiade.1.carlisle.d:0 "The first Spartakiade's opening ceremony was held in Carlisle and attended by dignitaries and athletes from around the socialist world. The British team carried the torch, the French team the hammer, and the other teams carried the pieces of the cog to the location where they were to be assembled. When placed together, they formed the international symbol of syndicalism!"
-Spartakiade.1.cardiff.d:0 "The first Spartakiade's opening ceremony was held in Cardiff and attended by dignitaries and athletes from around the socialist world. The British team carried the torch, the French team the hammer, and the other teams carried the pieces of the cog to the location where they were to be assembled. When placed together, they formed the international symbol of syndicalism!"
-Spartakiade.1.a:0 "What a glorious day for the working man!"
+Spartakiade.1.t:0 "1937년 스파르타키아드!"
+Spartakiade.1.paris.d:0 "첫번째 스파르타키아드 개최식이 파리에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.dijon.d:0 "첫번째 스파르타키아드 개최식이 디종에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.bordeaux.d:0 "첫번째 스파르타키아드 개최식이 보르도에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.marseille.d:0 "첫번째 스파르타키아드 개최식이 마르세유에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.london.d:0 "첫번째 스파르타키아드 개최식이 런던에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.edinburgh.d:0 "첫번째 스파르타키아드 개최식이 에든버러에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.manchester.d:0 "첫번째 스파르타키아드 개최식이 맨체스터에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.carlisle.d:0 "첫번째 스파르타키아드 개최식이 칼라일에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.cardiff.d:0 ""첫번째 스파르타키아드 개최식이 카디프에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!""
+Spartakiade.1.a:0 "노동자들을 위한 멋진 날이군!"
 
-Spartakiade.2.t:0 "Outcome of the Spartakiade"
-Spartakiade.2.d:0 "We have got a few medals in the events, but not enough for our team to be the winner."
-Spartakiade.2.a:0 "Neither good, nor bad."
+Spartakiade.2.t:0 "스파르타키아드의 결과"
+Spartakiade.2.d:0 "우리는 몇개의 메달을 땄지만, 승자가 되기에는 부족합니다."
+Spartakiade.2.a:0 "좋지도 않고 나쁘지도 않군."
 
-Spartakiade.3.t:0 "Outcome of the Spartakiade"
-Spartakiade.3.d:0 "We have taken many gold medals in the events, making us the clear victor of the Spartakiade!"
-Spartakiade.3.a:0 "Go $COUNTRYNAME$!"
+Spartakiade.3.t:0 "스파르타키아드의 결과"
+Spartakiade.3.d:0 "우리는 많은 금메달을 땄고, 스파르타키아드의 완벽한 승자가 되었습니다!"
+Spartakiade.3.a:0 "가라, $COUNTRYNAME$!"
 
-Spartakiade.4.t:0 "Outcome of the Spartakiade"
-Spartakiade.4.d:0 "To our horror, one of our athletes was caught trying to bribe the judge of his event! He has been kicked out of the Spartakiade, and his career is likely over."
-Spartakiade.4.a:0 "But I thought we were a post money economy!"
+Spartakiade.4.t:0 "스파르타키아드의 결과"
+Spartakiade.4.d:0 "놀랍게도 우리 선수들 중 한명이 심판에게 뇌물을 주려다가 결렸습니다! 그 선수는 스파르타키아드에서 쫓겨났고, 경력은 끝났습니다."
+Spartakiade.4.a:0 "난 우리가 탈 화폐 경제인줄 알았는데!"
 
-Spartakiade.5.t:0 "End of the 1937 Spartakiade!"
-Spartakiade.5.d:0 "The Spartakiade has ended, and it has been a tremendous success with a great many people enjoying the games. It was a very good move to join the Spartakiade, the Olympics of the working class!"
-Spartakiade.5.a:0 "Too bad it ended."
+Spartakiade.5.t:0 "1937년 스파르타키아드가 끝나다!"
+Spartakiade.5.d:0 "스파르타키아드는 끝났고, 많은 사람들이 대회를 즐기면서 우리는 엄청난 성공을 거두었습니다. 노동 계급의 올림픽인 스파르타키아드에 참가한 것은 아주 좋은 변화였습니다!"
+Spartakiade.5.a:0 "끝나서 아쉽군."
 
-Spartakiade.6.t:0 "End of the 1937 Spartakiade"
-Spartakiade.6.d:0 "The Spartakiade has ended and it has been a tremendous success with a great many people enjoying the games. However, our nation's reputation has been stained by the bribery scandal that happened during it."
-Spartakiade.6.a:0 "Looks like cheaters never prosper."
+Spartakiade.6.t:0 "1937년 스파르타키아드가 끝나다"
+Spartakiade.6.d:0 "스파르타키아드는 끝났고, 많은 사람들이 대회를 즐기면서 우리는 엄청난 성공을 거두었습니다. 하지만 대회가 열리는 동안 발생한 뇌물 수수 사건으로 인해 우리 나라의 명성은 깎였습니다."
+Spartakiade.6.a:0 "속임수는 절대로 성공하지 못하는 것 같군."
 
-Spartakiade.7.t:0 "The 1941 Spartakiade— cancelled"
-Spartakiade.7.d:0 "The 1941 Spartakiade was going to be held in Paris, but with another World War ongoing, it looks like it will not happen this year."
-Spartakiade.7.a:0 "Aww..."
+Spartakiade.7.t:0 "1941년 스파르타키아드가 취소되다"
+Spartakiade.7.d:0 "1941년 스파르타키아드는 파리에서 열리기로 되어있었지만, 다시 세계 대전이 벌어지고 있는 관계로 올해는 열리지 않을 것입니다."
+Spartakiade.7.a:0 "아..."
 
-Spartakiade.8.t:0 "The 1945 Spartakiade"
-Spartakiade.8.d:0 "The 1945 Spartakiade's opening ceremony was held in Mexico City and attended by dignitaries and athletes from around the socialist world."
-Spartakiade.8.a:0 "Another glorious day for the working man!"
+Spartakiade.8.t:0 "1945년 스파르타키아드"
+Spartakiade.8.d:0 "1945년 스파르타키아드 개최식이 멕시코시티에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다."
+Spartakiade.8.a:0 "다시 노동자들을 위한 멋진 날이군!"
 
-Spartakiade.9.t:0 "Outcome of the Spartakiade"
-Spartakiade.9.d:0 "We have got a few medals in the events, but not enough for our team to be the winner."
-Spartakiade.9.a:0 "Neither good, nor bad."
+Spartakiade.9.t:0 "스파르타키아드의 결과"
+Spartakiade.9.d:0 "우리는 몇개의 메달을 땄지만, 승자가 되기에는 부족합니다."
+Spartakiade.9.a:0 "좋지도 않고 나쁘지도 않군."
 
-Spartakiade.10.t:0 "Outcome of the Spartakiade"
-Spartakiade.10.d:0 "We have taken many gold medals in the events, making us the clear victor of the Spartakiade!"
-Spartakiade.10.a:0 "Go $COUNTRYNAME$!"
+Spartakiade.10.t:0 "스파르타키아드의 결과"
+Spartakiade.10.d:0 "우리는 많은 금메달을 땄고, 스파르타키아드의 완벽한 승자가 되었습니다!"
+Spartakiade.10.a:0 "가라, $COUNTRYNAME$!"
 
-Spartakiade.11.t:0 "End of the 1945 Spartakiade!"
-Spartakiade.11.d:0 "The Spartakiade has ended, and it has been a tremendous success with a great many people enjoying the games. It was a very good move to join the Spartakiade, the Olympics of the working class!"
-Spartakiade.11.a:0 "Too bad it ended."
+Spartakiade.11.t:0 "1945년 스파르타키아드가 끝나다!"
+Spartakiade.11.d:0 "스파르타키아드는 끝났고, 많은 사람들이 대회를 즐기면서 우리는 엄청난 성공을 거두었습니다. 노동 계급의 올림픽인 스파르타키아드에 참가한 것은 아주 좋은 변화였습니다!"
+Spartakiade.11.a:0 "끝나서 아쉽군."
 
-Spartakiade.21.t:0 "Loyalist terrorists plant a bomb!"
-Spartakiade.21.d:0 "Underground fraction fighting for 'liberation of the UK from totalitarian socialism' planted two bombs under officials gallery on stadium. Nobody was harmed, as one of the workers spotted the bombs, just few seconds before government officials entered the stadium. This is a bad sign"
-Spartakiade.21.a:0 "We will remember this!"
+Spartakiade.21.t:0 "왕당파 테러리스트가 폭탄을 설치하다!"
+Spartakiade.21.d:0 "'영국을 전체사회주의에서 해방'시키기 위해 싸우는 지하조직이 경기장 내 공무원 좌석 아래에 폭탄 두개를 숨겨놨습니다. 정부공무원들이 경기장이 들어오기 전 몇초 전에 한 노동자가 폭탄을 발견하면서 아무도 다치지 않았습니다. 이는 나쁜 징조입니다."
+Spartakiade.21.a:0 "우린 이 일을 기억할 것이다!"
 
-Spartakiade.22.t:0 "Loyalist terrorists plant a bomb!"
-Spartakiade.22.d:0 "Underground fraction fighting for 'liberation of the France from totalitarian socialism' planted two bombs under officials gallery on stadium. Nobody was harmed, as one of the workers spotted the bombs, just few seconds before government officials entered the stadium. This is a bad sign"
-Spartakiade.22.a:0 "We will remember this!"
+Spartakiade.22.t:0 "왕당파 테러리스트가 폭탄을 설치하다!"
+Spartakiade.22.d:0 "'프랑스 전체사회주의에서 해방'시키기 위해 싸우는 지하조직이 경기장 내 공무원 좌석 아래에 폭탄 두개를 숨겨놨습니다. 정부공무원들이 경기장이 들어오기 전 몇초 전에 한 노동자가 폭탄을 발견하면서 아무도 다치지 않았습니다. 이는 나쁜 징조입니다."
+Spartakiade.22.a:0 "우린 이 일을 기억할 것이다!"
 
-Spartakiade.23.t:0 "Choosing a Host City for the Spartakiade"
-Spartakiade.23.d:0 "As usual, we need to start thinking about the 1937 Spartakiade. Where shall it be hosted? How many contests will it have? How many delegations will come? The most important question however is where we should host the Spartakiade."
+Spartakiade.23.t:0 "스파르타키아드 개최 도시 선정"
+Spartakiade.23.d:0 "늘 그렇듯, 우리는 1937년 스파르타키아드를 준비해야 합니다. 어디에서 개최될까요? 얼마나 많은 경기가 열릴까요? 얼마나 많은 대표단이 올까요? 그러나 가장 중요한 문제는 어디에서 개최될지 입니다."
 Spartakiade.23.a:0 "프랑스 도시"
 Spartakiade.23.b:0 "영국 도시"
 
-Spartakiade.24.t:0 "Which French city will host the Spartakiade?"
-Spartakiade.24.d:0 "We should choose French city which will have honour of hosting the 1937 Spartakiade."
+Spartakiade.24.t:0 "스파르타키아드는 프랑스 내 어느 도시에서 열릴까요?"
+Spartakiade.24.d:0 "우리는 1937년 스파르타키아드를 개최하는 영광을 누릴 프랑스 도시를 선택해야 합니다."
 Spartakiade.24.a:0 "파리!"
-Spartakiade.24.b:0 "Dijon to show Germans that we are superior!"
+Spartakiade.24.b:0 "독일에게 우월함을 보이기 위해 디종으로!"
 Spartakiade.24.c:0 "보르도"
 Spartakiade.24.e:0 "마르세유"
 
-Spartakiade.25.t:0 "Which British City will host the Spartakiade?"
-Spartakiade.25.d:0 "Several beautiful cities of our great Union have declared their willingness to host the Spartakiade. Which one shall have honour of hosting the greatest Syndicalist sport event of 1937?"
+Spartakiade.25.t:0 "스파르타키아드는 브리튼 내 어느 도시에서 열릴까요?"
+Spartakiade.25.d:0 "우리 위대한 연합의 몇몇 아름다운 도시들이 스파르타키아드를 개최할 의사를 밝혔습니다. 1937년의 가장 큰 생디칼리즘 스포츠 대회를 개최하는 영광은 어느 도시가 가져갈까요?"
 Spartakiade.25.a:0 "런던!"
 Spartakiade.25.b:0 "에든버러!"
 Spartakiade.25.c:0 "맨체스터"
