--- a/Kaiserreich Korean Translation/localisation/KR_Spartakiade_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Spartakiade_l_english.yml
@@ -4,15 +4,15 @@ spartikade_bomb:0 "왕당파의 폭탄"
 
 ### Spartakiade ###
 Spartakiade.1.t:0 "1937년 스파르타키아드!"
-Spartakiade.1.paris.d:0 "첫번째 스파르타키아드 개최식이 파리에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
-Spartakiade.1.dijon.d:0 "첫번째 스파르타키아드 개최식이 디종에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
-Spartakiade.1.bordeaux.d:0 "첫번째 스파르타키아드 개최식이 보르도에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
-Spartakiade.1.marseille.d:0 "첫번째 스파르타키아드 개최식이 마르세유에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
-Spartakiade.1.london.d:0 "첫번째 스파르타키아드 개최식이 런던에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
-Spartakiade.1.edinburgh.d:0 "첫번째 스파르타키아드 개최식이 에든버러에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
-Spartakiade.1.manchester.d:0 "첫번째 스파르타키아드 개최식이 맨체스터에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
-Spartakiade.1.carlisle.d:0 "첫번째 스파르타키아드 개최식이 칼라일에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
-Spartakiade.1.cardiff.d:0 ""첫번째 스파르타키아드 개최식이 카디프에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 영국 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!""
+Spartakiade.1.paris.d:0 "첫번째 스파르타키아드 개최식이 파리에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 브리튼 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.dijon.d:0 "첫번째 스파르타키아드 개최식이 디종에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 브리튼 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.bordeaux.d:0 "첫번째 스파르타키아드 개최식이 보르도에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 브리튼 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.marseille.d:0 "첫번째 스파르타키아드 개최식이 마르세유에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 프랑스 팀은 횃불, 브리튼 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.london.d:0 "첫번째 스파르타키아드 개최식이 런던에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 브리튼 팀은 횃불, 프랑스 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.edinburgh.d:0 "첫번째 스파르타키아드 개최식이 에든버러에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 브리튼 팀은 횃불, 프랑스 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.manchester.d:0 "첫번째 스파르타키아드 개최식이 맨체스터에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 브리튼 팀은 횃불, 프랑스 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.carlisle.d:0 "첫번째 스파르타키아드 개최식이 칼라일에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 브리튼 팀은 횃불, 프랑스 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!"
+Spartakiade.1.cardiff.d:0 ""첫번째 스파르타키아드 개최식이 카디프에서 열렸으며 사회주의 세계의 각국에서 온 고위 인사들과 운동 선수들이 참여했습니다. 브리튼 팀은 횃불, 프랑스 팀은 망치, 그리고 다른 팀들은 톱니 조각들을 조립할 장소로 옮겼습니다. 이것들을 한데 모으니 생디칼리즘의 국제적 상징이 만들어졌습니다!""
 Spartakiade.1.a:0 "노동자들을 위한 멋진 날이군!"
 
 Spartakiade.2.t:0 "스파르타키아드의 결과"
