--- a/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Najd_l_english.yml
@@ -17,8 +17,8 @@ SAU_social_conservative_party:0 "Hizb Altahaluf"
 SAU_social_conservative_party_long:0 "Hizb Altahaluf"
 SAU_authoritarian_democrat_party:0 "Al-Imarat Al-Arabiyah Al-Muttahidah"
 SAU_authoritarian_democrat_party_long:0 "Al-Imarat Al-Arabiyah Al-Muttahidah"
-SAU_paternal_autocrat_party:0 "Al Saud"
-SAU_paternal_autocrat_party_long:0 "Al Saud"
+SAU_paternal_autocrat_party:0 "알 사우드"
+SAU_paternal_autocrat_party_long:0 "알 사우드"
 SAU_national_populist_party:0 "Hizb Alearabiu"
 SAU_national_populist_party_long:0 "Hizb Alearabiu"
 
@@ -26,12 +26,12 @@ SAU_national_populist_party_long:0 "Hizb Alearabiu"
 POLITICS_SAUDI_DESC:0 "Abdulaziz Ibn Saud, the mortal rival of many dead men, now turns his sights towards Saud bin Abdulaziz. This rivalry began when the young Ibn Saud was ejected from his tent in Riyadh by the Rashids. Never a pawn of Emirs, ibn Saud's father rallied the destitute men of the coastal Emirates to the great goal of his dynasty, Wahhabism. The Rashids were then ejected at the cost of many men, including their only western ally. Ibn Saud himself started many a feuds the Saudis inherited, as he expressed hatred towards any Arab who turned their nose up towards Bedouins. Ibn Saud overcame this anger, and leveraged his past to negotiate the protection of the western Emirates after Britian left. However, this seed of anger had passed onto his men, who inherited his ferocity and may turn this youthful fury against him yet."
 
 ### Opinion Modifiers ###
-ott_jabalshammar:0 "Treason"
-sau_rebuild:0 "Respected our sovereignty"
+ott_jabalshammar:0 "반역자들"
+sau_rebuild:0 "우리의 주권을 존중함"
 
 ### Tooltips ###
-SAU_JBSKILL:0 "This Focus will be bypassed when we defeat §YJabal Shammar§!"
-SAU_saudi_victory:0 "Jabal Shammar has been defeated"
+SAU_JBSKILL:0 "이 중점은 우리가 §Y자발 샴마르r§!에게 패배했을 때 자동으로 건너뛰어집니다."
+SAU_saudi_victory:0 "자발 샴마르가 패배했습니다"
 IKH_revolt:0 "The Ikhwan has been crushed"
 SAU_develop_suryah_tt:0 "This adds §Y2 Civilian Factories§! when we control the §YLevant§!"
 SAU_develop_fringe_arabia_tt:0 "This adds §Y2 Civilian Factories§! when we control §YYemen§!"
@@ -40,66 +40,66 @@ SAU_develop_kuwait_tt:0 "This adds §Y1 Naval Dockyard§! when we control §YKuw
 SAU_ikhwan_provoking:0 "§RModernize the state to lead the Ikhwan into revolt.§!"
 
 ### Ideas ###
-SAU_ikh_aftermatch:0 "Salafi Discontent"
+SAU_ikh_aftermatch:0 "살라피 불만"
 SAU_ikh_aftermatch_desc:0 "Even after the military defeat of the Ikhwan, many still sympathise with them openly, and others plot for another revolt. Measures must be taken"
 SAU_heavy_jizya:0 "Heavy Jizya Payments"
 SAU_heavy_jizya_desc:0 "Every Christian and Jew living in Arabia pays a fair price for the freedom and peace we brought"
-SAU_warriors_of_faith:0 "Warriors of Faith"
+SAU_warriors_of_faith:0 "신앙의 전사들"
 SAU_warriors_of_faith_desc:0 "We will free our fellow Arabs! We will take down the Great Turk and those who stand in our way! God is Great!"
 SAU_madrasahs:0 "Salafi Madrasahs"
 SAU_madrasahs_desc:0 "Our wisest men are now not only properly funded, but have the capacity to expand and grow their great schools of Law and Faith"
-SAU_trading_expertise_idea:0 "Trading Expertise"
+SAU_trading_expertise_idea:0 "무역 전문기술"
 SAU_trading_expertise_idea_desc:0 "Our trading expertise is yielding us great benefits with our contacts"
-SAU_food_imports_idea:0 "Food Imports"
+SAU_food_imports_idea:0 "식량 수입"
 SAU_food_imports_idea_desc:0 "We are buying foodstuffs en masse and building a foundation for the future"
-SAU_illiterate_populace:0 "Illiterate Populace"
+SAU_illiterate_populace:0 "문맹 시민들"
 SAU_illiterate_populace_desc:0 "Many, if not most of our people are too uneducated to properly aid us in the ways we need them too"
-SAU_islamic_welfare:0 "Islamic Welfare"
+SAU_islamic_welfare:0 "이슬람 복지"
 SAU_islamic_welfare_desc:0 "Charity towards the needy is one of the five pillars of our faith; the many poor, destitute and the orphans and widows of war will not fall to poverty under our rule"
-SAU_backwards_economy:0 "Archaic Economy"
+SAU_backwards_economy:0 "고풍 경제"
 SAU_backwards_economy_desc:0 "Our economy is still based on small time agriculture, pastoral activity and Oil trading"
-SAU_religious_fervor_idea:0 "High Morale Troops"
+SAU_religious_fervor_idea:0 "사기 높은 군대"
 SAU_religious_fervor_idea_desc:0 "Well equipped and motivated men, our forces fight for more than their mere nation, but for the Holy Cities, for Faith and their Sovereign"
-SAU_new_arabian_army:0 "New Arabian Army"
+SAU_new_arabian_army:0 "신 아라비아 군대"
 SAU_new_arabian_army_desc:0 "Our reformed armed forces now act with renewed vigour and independence from politics, and god willing will bring us victory in the battlefield"
-SAU_arabian_horsemanship_idea:0 "Arabian Horsemanship"
+SAU_arabian_horsemanship_idea:0 "아라비아 마술"
 SAU_arabian_horsemanship_idea_desc:0 "Our horsemen, equipped with the finest steeds and steeled by years of raids, have answered the call and will fight for us in the coming war for the world"
-SAU_desert_logstics_idea:0 "Desert Logistics "
+SAU_desert_logstics_idea:0 "사막 병참"
 SAU_desert_logstics_idea_desc:0 "Our forces are trained to make the best our our terrain and know paths foreigners do not"
-SAU_uniting_the_peninsula:0 "Unifiers of Arabia"
+SAU_uniting_the_peninsula:0 "아라비아 통일"
 SAU_uniting_the_peninsula_desc:0 "The Rashidi dogs are dead and the road to a unified Arabia lies wide open. Sally forth and claim Victory!"
-SAU_moral_police:0 "Morals Police"
-SAU_muslim_universities:0 "Muslim Universities"
+SAU_moral_police:0 "도덕경찰"
+SAU_muslim_universities:0 "무슬림 대학"
 
 ### Focuses ###
 
 SAU_the_nemisis:0 "Two Emirs Enter..."
 SAU_the_nemisis_desc:0 "For a century war has raged between our houses, but one fact is clear: The Arabian peninsula is too small for the both of the house of Rashid and Saud"
-SAU_rashidis_get_out:0 "Drive off the Rashidis"
+SAU_rashidis_get_out:0 "라쉬디에서 벗어나자"
 SAU_rashidis_get_out_desc:0 "After a century of struggle, we have at least crushed the last meaningful Rashid stronghold, and we can finally reach our rightful place as masters of this land"
-SAU_fulfull_destiny:0 "Fulfill our destiny"
+SAU_fulfull_destiny:0 "운명을 완수하라"
 SAU_fulfull_destiny_desc:0 "Our conquest shouldn't end here! All Arabs must unite under Arabia!"
-SAU_asir:0 "Claims on Asir"
-SAU_hit_oman:0 "Eyes on Oman"
-SAU_hit_egypt:0 "Hit Egypt"
-SAU_hit_libya:0 "Hit Libya"
+SAU_asir:0 "아시르 영유권 주장"
+SAU_hit_oman:0 "오만을 향한 관심"
+SAU_hit_egypt:0 "이집트 공격"
+SAU_hit_libya:0 "리비아 공격"
 SAU_asir_desc:0 "Without the a larger power to back their pitiful landgrab, we can finally hit Yemen with full force. Southern Arabia will be ours!"
 SAU_hit_oman_desc:0 "Its time to finish what we started a decade ago. Now we have the resources to properly dethrone the foolish sultan of Muscat"
 SAU_hit_egypt_desc:0 "For too long the nearly apostate ways of the wanna be pharaohs have misled the faithful. Now, we must unite all Arabs under our rightful rule!"
 SAU_hit_libya_desc:0 "Now we reach west, towards lands we yet don't rule; we will see the Atlantic like the old Caliphs and liberate every Arab under the rule of western puppets"
 
 
-SAU_saudi_hegemony:0 "Saudi Hegemony"
+SAU_saudi_hegemony:0 "사우디 헤게모니"
 SAU_saudi_hegemony_desc:0 "Our allies have served their purpose. With the Rashids's and their allies gone, no tribe has the means to stand in our way. A new era begins for Arabia, and the Saudis call all the shots now"
-SAU_expand_oil_hold:0 "Expand Oil Hold"
+SAU_expand_oil_hold:0 "석유 비축량 확대"
 SAU_expand_oil_hold_desc:0 "For a long time we alloed local lords and chiefs to freely do with the Oil in their land as it pleased them; not anymore! Every man must be his duty to strengthen our position,,,"
-SAU_consolidating_suryah:0 "Consolidating Suriye"
+SAU_consolidating_suryah:0 "시리아 통합"
 SAU_consolidating_suryah_desc:0 "The Western Mashriq is a vast land that has the potential to far outshine Arabia economically and politically, and now that we are in its possession, we must ensure that our government is actually felt and respected by the locals."
-SAU_develop_suryah:0 "Develop Suriye"
+SAU_develop_suryah:0 "시리아 개발"
 SAU_develop_suryah_desc:0 "The land we now own are greatly urbanised areas with an immense potential workforce, and our new spoils put the family in a prime position to build factories in the large cities of Syria; we must take haste and sieze this opportunity"
 SAU_consolidating_fringe_arabia:0 "Consolidating Fringe Arabia"
 SAU_consolidating_fringe_arabia_desc:0 "As the flames of war lessen, we can finally set roots on the rich region of Yemen. Once allied Arabia Felix by the Rum due to the immense wealth of its rulers, these lands have long been held by Ottoman forcesm but also divided by petty sectarian squabbles which must be dealt with"
-SAU_develop_fringe_arabia:0 "Develop Yemen"
+SAU_develop_fringe_arabia:0 "예멘 개발"
 SAU_develop_fringe_arabia_desc:0 "The cities of Sanaa and Aden are among the largest in our realm, and their merchant classes will eagerly accept our help to develop and improve their lands, and ensure that they finally reach this new age of wonders we live in"
 SAU_consolidating_iraq_i_arab:0 "Consolidating Iraq-I-Arab"
 SAU_consolidating_iraq_i_arab_desc:0 "As our rule reaches these ancient lands, we reach the jewel of the Mashriq, Baghdad, but also many other towns who are unaware of sometimes who we even are! If Arabia is to stand as one, the grand machinery of the state must reach Iraq-i-Arab"
@@ -117,21 +117,21 @@ SAU_consolidating_realm:0 "Consolidating the Realm"
 SAU_consolidating_coaliiton_desc:0 "Our tribal allies will all gather again, and will be convinced by our wise arguments that our Emir is the sole supreme lord of Arabia. Of course, things are a little more complicated than that, and a concentrated effort must be made to reach that end"
 SAU_saudi_legal_code:0 "Saudi Legal Code"
 SAU_saudi_legal_code_desc:0 "While we still will preserve local law and legislation, we need to draft a proper legal code to be established in the entirety of our Kingdom's territory"
-SAU_minority:0 "Protect the Minorities"
+SAU_minority:0 "소수민족 보호"
 SAU_minority_desc:0 "For centuries, despite our differences, we have respected the rights of the Christians, Jews and other peoples under our rule, as it was instructed by the Prophet himself. We must ensure that all of our subjects, no matter their creed, are safeguarded"
-SAU_absolute_rulership:0 "Absolute Leadership"
+SAU_absolute_rulership:0 "절대적인 리더십"
 SAU_absolute_rulership_desc:0 "There is no time for deliberation and liberalism; there is only time for action. A leader must not waste his time listening to those lesser than him, but rather focus on his own opinions and his most trusted advisers"
 SAU_realm_of_the_arabs:0 "Realm of the Arabs"
 SAU_realm_of_the_arabs_desc:0 "All of Arabia is under us, and nothing can stand between us and the destiny of our people, to be united as one, under one single monarch: a Saud"
 SAU_houses_of_wisdom:0 "Houses of Wisdom"
 SAU_houses_of_wisdom_desc:0 "Houses of Wisdom"
 
-SAU_land_of_faith:0 "Land of Faith"
+SAU_land_of_faith:0 "신앙의 땅"
 SAU_cleanse_suryah:0 "Cleanse Suriye"
 SAU_cleanse_fringe_arabia:0 "Cleanse Fringe Arabia"
 SAU_cleanse_iraq_i_arab:0 "Cleanse Iraq-I-Arab"
 SAU_cleansing_of_heresy:0 "Cleansing of Heresy"
-SAU_law_of_faith:0 "Law of Faith"
+SAU_law_of_faith:0 "신앙법"
 SAU_Jizya:0 "Jizya"
 SAU_gather_the_amirs:0 "Gather the Amirs"
 SAU_trading_regulations:0 "Trading Regulations"
@@ -143,7 +143,7 @@ SAU_destroy_dissent:0 "Destroy Dissent"
 SAU_madrasah_funding:0 "Madrasah Funding"
 SAU_kuffar_weaponry:0 "Kuffar Weaponry"
 SAU_the_caliphate:0 "Saudi Caliphate"
-SAU_haia:0 "Establish Morals Police"
+SAU_haia:0 "도덕경찰 창설"
 SAU_succession_regulation:0 "Lawful Succession"
 SAU_land_of_faith_desc:0 "With the support of our clergy and wise experts of faith, we shall build Arabia into a paradise for the faithful, God being our witness."
 SAU_cleanse_suryah_desc:0 "Too many Turkish and Egyptian double agents, even atheist syndicalists roam the streets in the cities of Syria. Their sinful lives revolve around spreading unrest, and we will ensure they can't do that."
