--- a/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_USA_l_english.yml
@@ -489,15 +489,15 @@ freeworld_university:0 "자유 세계의 대학교가 설립되었습니다"
 freeworld_university_refused:0 "자유 세계의 대학교에 참여하는 것이 거부되었습니다."
 freeworld_university_withdrawal:0 "자유 세계의 대학교에서 탈퇴했습니다."
 REED_ESCAPES_FRA:0 "리드가 프랑스로 달아났습니다"
-curt_red_yes_FRA_ENG:0 "Implemented Reed's reforms"
-curt_red_yes_MEX:0 "Implemented Reed's reforms"
-curt_red_yes_CAN:0 "Implemented Reed's reforms"
-curt_red_some_FRA_ENG:0 "Implemented some of Reed's reforms"
-curt_red_some_MEX:0 "Implemented some of Reed's reforms"
-curt_red_some_CAN:0 "Implemented some of Reed's reforms"
-usa_no_recognise_us:0 "They refused to recognise us as a country"
-usa_recognise_us:0 "The recognized us as a country"
-usa_allies_us:0 "They offered us an alliance"
+curt_red_yes_FRA_ENG:0 "리드의 개혁이 시행됨"
+curt_red_yes_MEX:0 "리드의 개혁이 시행됨"
+curt_red_yes_CAN:0 "리드의 개혁이 시행됨"
+curt_red_some_FRA_ENG:0 "리드의 개혁이 일부 시행됨"
+curt_red_some_MEX:0 "리드의 개혁이 일부 시행됨"
+curt_red_some_CAN:0 "리드의 개혁이 일부 시행됨"
+usa_no_recognise_us:0 "우리를 국가로 인정하지 않음"
+usa_recognise_us:0 "우리를 국가로 인정함"
+usa_allies_us:0 "동맹을 제안함"
 
 ### Flag names ###
 macarthur_takes_over:0 "맥아더가 권력을 장악하다!"
@@ -713,8 +713,8 @@ ustates.42.a:0 "시골들이 걷잡을 수 없이 소용돌이 치고 있다."
 
 ustates.43.t:0 "대륙횡단 개혁"
 ustates.43.d:0 "롱의 개혁안의 주요점은 동해안에 산업과 고용 창출 효과를 가져오는 것이었습니다. 롱은 오래 전부터 캘리포니아의 산업 부호들이 미국인들을 희생시키면서 돈을 버는 것에 더 관심이 있다고 의심해왔습니다."
-ustates.43.a:0 "우리가 필요한 만큼 철저하게 (Close as much as we need)."
-ustates.43.b:0 "우리가 필요한 만큼만 철저하게 (Close only what we need)."
+ustates.43.a:0 "우리가 필요한 만큼 철저하게."
+ustates.43.b:0 "우리가 필요한 만큼만 철저하게."
 ustates.43.c:0 "이럴 필요가 없다."
 
 ustates.44.t:0 "캘리포니아가 개혁 시행을 거부하다."
