번역 및 수정
오역 및 지나친 직역 수정, 기타 번역

--- a/Kaiserreich Korean Translation/localisation/KR_Traits_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Traits_l_english.yml
@@ -1,16 +1,16 @@
 l_english:
 
 ### From DH ###
-undistinguished_suit:0 "특별하지 않는 정장"
+undistinguished_suit:0 "특별한 것 없는 중역"
 grand_protector:0 "위대한 수호자"
 
 ### Head of Government ###
-hog_ambitious_union_boss:0 "야심있는 연합 정당 총수"
+hog_ambitious_union_boss:0 "야심있는 노조 지도자"
 hog_backroom_backstabber:0 "막후 중상가"
-hog_corporate_suit:0 "기업 소송"
+hog_corporate_suit:0 "기업 중역"
 hog_flamboyant_tough_guy:0 "화려한 터프 가이"
 hog_happy_amateur:0 "행복한 아마추어"
-hog_local_tyrant:0 "Local Tyrant"
+hog_local_tyrant:0 "지역 두목"
 hog_naive_optimist:0 "순진한 낙천주의자"
 hog_old_admiral:0 "늙은 제독"
 hog_old_air_marshal:0 "늙은 공군참모"
@@ -29,7 +29,7 @@ hog_the_lion_of_africa:0 "아프리카의 사자"
 hog_the_new_administrator:0 "새로운 행정관"
 hog_the_peasant_marshal:0 "농민 참모"
 hog_the_tiger:0 "호랑이"
-hog_the_vozhd:0 "소비에트 지도자"
+hog_the_vozhd:0 "영도자"
 hog_totalist_chairman:0 "총회 의장"
 hog_gentleman_politician:0 "신사 정치인"
 hog_supreme_ruler:0 "최고 통치자"
@@ -38,7 +38,7 @@ hog_supreme_ruler:0 "최고 통치자"
 eco_administrative_genius:0 "행정 천재"
 eco_army_reform_committee:0 "군 개혁 위원회"
 eco_balanced_budget_economy:0 "균형 예산 경제"
-eco_bank_president:0 "은행 대통령"
+eco_bank_president:0 "은행 대표"
 eco_construction_magnate:0 "건설 거물"
 eco_corrupt_kleptocrat:0 "부패한 도둑정치가"
 eco_industrial_chemist:0 "산업화학자"
@@ -76,7 +76,7 @@ for_apologetic_clerk:0 "변명하는 서기"
 for_iron_fisted_brute:0 "냉혹한 짐승"
 for_great_compromiser:0 "대 협상가"
 for_general_staffer:0 "일반 직원"
-for_the_cloak_n_dagger_schemer:0 "클록앤대거 책략가"
+for_the_cloak_n_dagger_schemer:0 "염탐하는 책략가"
 
 ### Security Minister ###
 sec_back_stabber:0 "중상가"
@@ -103,28 +103,28 @@ int_naval_intelligence_specialist:0 "해군 정보 전문가"
 int_o:0 ""O""
 
 ### mhc Minister
-cos_school_of_manoeuvre:0 "School of Manoeuvre"
-cos_school_of_fire_support:0 "School of Fire Support"
-cos_school_of_mass_combat:0 "School of Mass Combat"
-cos_school_of_psychology:0 "School of Psychology"
-cos_school_of_defence:0 "School of Defence"
-cos_school_of_commando_operations:0 "School of Commando Operations"
+cos_school_of_manoeuvre:0 "기동전 교련"
+cos_school_of_fire_support:0 "화력지원 교련"
+cos_school_of_mass_combat:0 "대규모 전투 교련"
+cos_school_of_psychology:0 "심리전 교련"
+cos_school_of_defence:0 "방어전 교련"
+cos_school_of_commando_operations:0 "특공 전투 교련"
 
 ### carm Minister
-carm_elastic_defence_doctrine:0 "Elastic Defence Doctrine"
-carm_static_defence_doctrine:0 "Static Defence Doctrine"
-carm_decisive_battle_doctrine:0 "Decisive Battle Doctrine"
+carm_elastic_defence_doctrine:0 "탄력 방어 교리"
+carm_static_defence_doctrine:0 "고정 방어 교리"
+carm_decisive_battle_doctrine:0 "대전투 교리"
 carm_armoured_spearhead_doctrine:0 "기갑 돌파 교리"
-carm_guns_and_butter_doctrine:0 "Guns and Butter Doctrine"
-carm_commando_doctrine:0 "Commando Doctrine"
-carm_doctrine_of_autonomy:0 "Doctrine of Autonomy"
+carm_guns_and_butter_doctrine:0 "군사 민생 양립 교리"
+carm_commando_doctrine:0 "특공대 교리"
+carm_doctrine_of_autonomy:0 "자율성 교리"
 
 ### cnav Minister
-cnav_open_seas_doctrine:0 "Open Seas Doctrine"
-cnav_decisive_battle_doctrine:0 "Decisive Battle Doctrine"
-cnav_power_projection_doctrine:0 "Power Projection Doctrine"
-cnav_indirect_approach_doctrine:0 "Indirect Approach Doctrine"
-cnav_base_control_doctrine:0 "Base Control Doctrine"
+cnav_open_seas_doctrine:0 "대해 교리"
+cnav_decisive_battle_doctrine:0 "대전투 교리"
+cnav_power_projection_doctrine:0 "세력 투사 교리"
+cnav_indirect_approach_doctrine:0 "간접 접근 교리"
+cnav_base_control_doctrine:0 "기지 타격 교리"
 
 ### cair Minister
 cair_air_superiority_doctrine:0 "공중 우세 교리"
