--- a/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Ukraine_l_english.yml
@@ -25,31 +25,31 @@ fraud_in_the_administration:0 "Fraud in the Administration"
 fraud_in_the_administration_desc:0 "-"
 profits_from_kulaks:0 "Profits from the Kulaks"
 profits_from_kulaks_desc:0 "Ukraine has raised taxes on its landowning farmers 'Kulaks' and reinvests the money in the betterment of the nation's most destitute farms and villages. Even the poorest Ukrainians can now live with dignity."
-another_crisis_kulaks:0 "Another Crisis"
+another_crisis_kulaks:0 "또 다른 위기"
 another_crisis_kulaks_desc:0 "The Ukrainian government's decision to redistribute the land of its wealthy farmers known as 'Kulaks' has had disastrous consequences. Agricultural yields have fallen sharply and the price of food has skyrocketed."
-ukranian_foreign_policy:0 "Ukrainian Foreign Policy Focus"
+ukranian_foreign_policy:0 "우크라이나 대외 정책 중점"
 ukranian_foreign_policy_desc:0 "-"
-investing_in_old_factories:0 "Investing in Old Factories"
+investing_in_old_factories:0 "구식 공장 투자"
 investing_in_old_factories_desc:0 "-"
-investing_in_new_factories:0 "Investing in New Factories"
+investing_in_new_factories:0 "신식 공장 투자"
 investing_in_new_factories_desc:0 "-"
 fn_oun_reforms:0 "'ViN' and 'OUN' Reforms"
 fn_oun_reforms_desc:0 "New local governments led by officials from the 'Faith and Nation' and 'Organisation of Ukrainian Nationalists' parties have been effective in mitigating some of Ukraine's administrative troubles."
-UKR_language_immersion:0 "Language Immersion Project"
+UKR_language_immersion:0 "언어 집중 계획"
 UKR_language_immersion_desc:0 "Ukraine, led by the 'Organisation of Ukrainian Nationalists', has implemented a new programme of national linguistic education. Villages with large Russian-speaking populations now receive access to government subsidised Ukrainian language educational programs."
-constructing_donetsk_airport:0 "Constructing the Donetsk Airport"
+constructing_donetsk_airport:0 "도네츠크 공항 건설"
 constructing_donetsk_airport_desc:0 "-"
-UKR_New_Army:0 "New Ukrainian Army"
+UKR_New_Army:0 "새로운 우크라이나 육군"
 UKR_New_Army_desc:0 "Hetman Skoropadsky has restructured the Ukrainian military into a much smaller professional force. While capable of maintaining internal security and much less corrupt and expensive to maintain, the new Ukrainian army is far less numerous."
-UKR_Peasant_state:0 "Peasant State"
+UKR_Peasant_state:0 "농업 국가"
 UKR_Peasant_state_desc:0 "Ukraine has long relied on small peasant-farmers for its agricultural production. The Hetman, Skoropadsky, has implemented new reforms to alleviate the financial burden on and empower, Ukraine's peasantry."
-UKR_New_Agriculture:0 "Breadbasket of Europe"
+UKR_New_Agriculture:0 "유럽의 밥줄"
 UKR_New_Agriculture_desc:0 "With new infrastructure and technological advancement, Ukraine's agricultural output, already substantial, has grown to become one of the largest in Europe. Ukrainian produce permeates throughout Europe, and perhaps no meal is eaten that hadn't at least partially originated in Ukraine; Ukraine has now truly become the breadbasket of Europe."
-UKR_Splendid_Isolation:0 "Splendid Isolation"
+UKR_Splendid_Isolation:0 "훌륭한 격리"
 UKR_Splendid_Isolation_desc:0 "Rather than rely on a foreign power for protection, Ukraine has endeavoured to forge its own place in international affairs."
-UKR_Ties_Germany:0 "Ties with Germany"
+UKR_Ties_Germany:0 "독일과 유대"
 UKR_Ties_Germany_desc:0 "Ukraine has reaffirmed its commitment to Germany and the Reichspakt and endeavours to secure the eastern flank of the great German-led alliance."
-UKR_Ties_Russia:0 "Ties with Russia"
+UKR_Ties_Russia:0 "러시아와 유대"
 UKR_Ties_Russia_desc:0 "Despite Ukrainian suspicion of Russian expansionist aspirations, Ukraine has abandoned the Reichspakt for its old overlord, Russia."
 UKR_Rada_diss:0 "Supreme Rada is dissolved"
 UKR_Rada_diss_desc:0 "The Hetman, Pavlo Skoropadsky, has persuaded the king to dissolve the Ukrainian Rada. Without opposition from the Rada, Skoropadsky is now able to govern Ukraine as he sees fit."
