--- a/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Germany_l_english.yml
@@ -1054,28 +1054,28 @@ gerdom.200.af:0 "그는 재고할 것이다."
 
 gerdom.201.t:0 "독일 자원병이 도착하다!"
 gerdom.201.d:0 "베르톨트 브레히트와 다른 독일 생디칼리스트들이 우리의 투쟁에 지원하기 위해 두 자원자 사단을 이끌고 왔습니다!"
-gerdom.201.a:0 "인터내셔널은 인권의 권리를 위해 싸운다!"
+gerdom.201.a:0 "인터내셔널은 인간의 권리를 위해 싸운다!"
 
 gerdom.202.t:0 "독일 자원병이 도착하다!"
 gerdom.202.d:0 "베르톨트 브레히트와 다른 독일 생디칼리스트들이 우리의 투쟁에 지원하기 위해 두 자원자 사단을 이끌고 왔습니다!"
-gerdom.201.a:0 "인터내셔널은 인권의 권리를 위해 싸운다!"
+gerdom.201.a:0 "인터내셔널은 인간의 권리를 위해 싸운다!"
 
 gerdom.203.t:0 "독일 자원병이 도착하다!"
 gerdom.203.d:0 "베르톨트 브레히트와 다른 독일 생디칼리스트들이 우리의 투쟁에 지원하기 위해 두 자원자 사단을 이끌고 왔습니다!"
-gerdom.201.a:0 "인터내셔널은 인권의 권리를 위해 싸운다!"
+gerdom.201.a:0 "인터내셔널은 인간의 권리를 위해 싸운다!"
 
 gerdom.204.t:0 "독일 자원병이 도착하다!"
 gerdom.204.d:0 "베르톨트 브레히트와 다른 독일 생디칼리스트들이 우리의 투쟁에 지원하기 위해 두 자원자 사단을 이끌고 왔습니다!"
-gerdom.201.a:0 "인터내셔널은 인권의 권리를 위해 싸운다!"
+gerdom.201.a:0 "인터내셔널은 인간의 권리를 위해 싸운다!"
 
 gerdom.205.t:0 "침묵하는 라인란트"
-gerdom.205.d:0 "수많은 저명한 생디칼리즘 동조자들이 나라 밖으로 나와 싸우고, 외국에서 죽기를 희망하며, 우리 땅의 긴장감이 악영향없이 크게 감소했습니다. 라인란트는 마침내 약간의 평화와 조용함을보고 있습니다."
+gerdom.205.d:0 "수많은 저명한 생디칼리즘 동조자들이 나라 밖으로 나와 싸우고, 외국에서 죽기를 희망하며, 우리 땅의 긴장감이 악영향없이 크게 감소했습니다. 라인란트는 마침내 약간의 평화와 조용함을 맛보고 있습니다."
 gerdom.205.a:0 "이렇게 계속되길 바라자..."
 
 gerdom.206.t:0 "생디칼리즘 동조자가 고향에 돌아오길 원한다"
-gerdom.206.d:0 "전쟁이 끝났으므로 자원 봉사자들로 구성된 '국제 사단'이 집으로 돌아 가려고합니다. 많은 사람들이 아직도 그들의 팔을 가지고 있으며 모든 생존자들은 전쟁으로 굳어진 신디칼 주의자들입니다. 그러나 우리가 국경을 넘어서 들어갈 수 없게되면, 독일인들의 붉은 악당에 대한 견해가 강해지므로 많은 스캔들없이 그들을 멀리 할 수 있어야합니다. 하지만 필연적으로 국제 사회에 불만을 터뜨릴 때 우리를 도울 위험이 있습니다."
+gerdom.206.d:0 "전쟁이 끝났으므로 자원 봉사자들로 구성된 '국제 사단'이 집으로 돌아 가려고 합니다. 많은 사람들이 아직도 그들의 무기를 가지고 있으며 모든 생존자들은 전쟁으로 단련된 생디칼리스트들입니다. 그러나 우리가 그들이 국경을 넘는 것을 금지한다면, 독일인들의 공산주의의 위협에 대한 견해가 강해지므로 스캔을 일으키지 않기 위해 그들을 멀리해야 합니다. 하지만 우리가 필연적으로 인터네셔널과 충돌한다면 그들이 등을 돌리는 위험을 감수해야 합니다."
 gerdom.206.a:0 "군에 입대해야 할 것이다!"
-gerdom.206.b:0 "그들의 가족에게로 돌아갈 수 있다."
+gerdom.206.b:0 "그들은 가족에게로 돌아갈 수 있다."
 gerdom.206.c:0 "국경을 봉쇄하라!"
 
 gerdom.207.t:0 "베르톨트 브레히트 사망"
@@ -1086,7 +1086,7 @@ gerdom.208.t:0 "베르톨트 브레히트가 고국으로 돌아오다"
 gerdom.208.d:0 "최선의 노력에도 불구하고, 생디칼리즘 작가인 베르톨트 브레히트는 어떻게든 국경을 넘어 밀입국한 것처럼 보입니다. 그와 그의 가족은 지하에 숨었으며 논란이 되고 있는 인물은 자본주의 체제에 반대하는 노동자들의 결속을 공공연히 연설하고 있습니다."
 gerdom.208.a:0 "한 번이라도 입을 닫을 수 없는 건가?!"
 
-gerdom.209.t:0 "인터내셔널 사단이 군대를 제공하다"
+gerdom.209.t:0 "국제 사단이 군대를 제공하다"
 gerdom.209.d:0 "생디칼리즘의 대의를 위해 용감하게 싸운 후, 국제 사단의 동지들과 베테랑들은 독일에 있는 그들의 고향으로 돌아가는 것을 거부당했습니다. 수 개월 동안 표류한 후 많은 전 동지들이 이제 다시 집합했고, 독일을 제국주의의 재앙으로부터 해방시키기 위해 무기를 들기로 결정했다. 그들의 수는 전투와 빈곤으로 줄어들었지만, 그들은 전쟁을 경험한 베테랑들이고 인터네셔널의 군사력에 도움이 될 것입니다."
 gerdom.209.a:0 "어서오게, 동지들이여! "
 gerdom.209.b:0 "하지만 대가가 크겠군..."
