--- a/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Albania_l_english.yml
@@ -171,120 +171,120 @@ albania.39.d:0 "알바니아인들은 알바니아의 땅이라고 주장하는 
 albania.39.a:0 "우린 절대 항복하지 않을 것이다!"
 
 albania.40.t:0 "파르티잔이 새로 세워진 독일 학교를 공격하다!"
-albania.40.d:0 "In an attempt to oppose, and destroy, the newly established German schools, Albanian nationalist partisans have taken to vandalising and destroying the property, hoping to scare us off and prevent us from building and funding the construction of German schools."
-albania.40.a:0 "They shall not succeed!"
+albania.40.d:0 "반대하고 파괴하려는 시도로써, 알바니아 민족주의자 파르티잔들은, 새로 설립된 독일 학교들, 그 소유지를 우리를 놀라게 하며 독일 학교 건설 지원 자금을 막기 위해서 파괴하고 부수기로 결정했습니다."
+albania.40.a:0 "그들은 성공하지 못할것이다!"
 
 albania.41.t:0 "버를라치가 암살당하다!"
-albania.41.d:0 "In a surprising event for both the common Albanian and international observers, the assassination attempt on Shefqet Vërlaci has managed to succeed, with the former president of Albania being killed and the Unity Party, led by Avni Rrustemi, assuming power. Today is a dark day, for many Albanians, while having an intense dislike of Vërlaci, do not view the Unity Party as the rightful leaders of Albania..."
-albania.41.a:0 "It will take time to cement our rule."
+albania.41.d:0 "알바니아의 사람들과 국제 참관인 모두에게 놀라운 사건으로, 셰프톄트 버를라치에 대한 암살 시도는 성공을 거두었으며, 알바니아 전 대통령이 살해당했던 아브니 루스테미가 주도하는 통합당이 권력을 맡았습니다. 오늘은 어두운 날입니다. 많은 알바니아인들은 버를라치에 대한 격렬한 혐오감을 가지고 있었지만, 통합당을 알바니아의 정당한 지도자로서 보진 않습니다."
+albania.41.a:0 "우리 규칙을 고수하는 데는 시간이 걸릴 것이다."
 
 albania.42.t:0 "버를라치가 살아남다!"
-albania.42.d:0 "Thankfully, the assassin, who many had already expected to fail, has not managed to kill [Root.GetLeader], who is safe, yet still harmed, and recovering. The people who had hired the assassin, namely, the Unity Party, and the assassin himself have all been purged with Fan Noli now in charge of the declining party."
-albania.42.a:0 "Today is a joyous occasion!"
+albania.42.d:0 "고맙게도, 이미 실패할 것으로 예상했던 암살자는 안전하면서도 여전히 피해를 입고 회복하고 있던 [Root.GetLeader]를 죽일 수 없었습니다. 암살자를 고용한 사람들, 즉 통합당과 암살자 자신은 이제는 쇠퇴하고있는 당을 담당하고있는 판 놀리와 함께 모두 제거되었습니다."
+albania.42.a:0 "오늘은 즐거운 날이다!"
 
 albania.43.t:0 "루스테미가 암살당하다!"
-albania.43.d:0 "In a surprising event for both the common Albanian and international observers, the assassination attempt on Avni Rrustemi has managed to succeed, with the former president of Albania being killed and the Progressive Party, led by Shefqet Vërlaci, assuming power. Today is a dark day, for many Albanians, who had held high views of Rrustemi, do not view the Unity Party as the rightful leaders of Albania..."
-albania.43.a:0 "It will take time to cement our rule."
+albania.43.d:0 "알바니아의 사람들과 국제 참관인 모두에게 놀라운 사건으로, 아브니 루스테미에 대한 암살 시도는 성공을 거두었으며, 알바니아 전 대통령이 살해당했던 셰프톄트 버를라치가 주도하는 진보당과이 권력을 맡았습니다. 오늘은 어두운 날입니다. 많은 알바니아인들은 루스테미에 대한 높은 견해를 가지고 있었고, 연합당을 알바니아의 정당한 지도자로서 보지 않습니다."
+albania.43.a:0 "우리 규칙을 고수하는 데는 시간이 걸릴 것이다."
 
 albania.44.t:0 "루스테미가 살아남다!"
-albania.44.d:0 "Thankfully, the assassin, who many had already expected to fail, has not managed to kill [Root.GetLeader], who is safe, yet still harmed, and recovering. The people who had hired the assassin, namely, the Progressive Party, and the assassin himself have all been purged with Ahmet Zogu now in charge of the declining party."
-albania.44.a:0 "Today is a joyous occasion!"
+albania.44.d:0 "고맙게도, 이미 실패할 것으로 예상했던 암살자는 안전하면서도 여전히 피해를 입고 회복하고 있던 [Root.GetLeader]를 죽일 수 없었습니다. 암살자를 고용한 사람들, 즉 진보당과 암살자 자신은 이제는 쇠퇴하고있는 당을 담당하고있는 아흐메트 조구와 함께 모두 제거되었습니다."
+albania.44.a:0 "오늘은 즐거운 날이다!"
 
 albania.45.t:0 "비드의 추밀원"
-albania.45.d:0 "Due to the beginning of the reversal of the current republican institutions, it is important that we begin to find substitutes for the former establishments that had previously existed prior to our reign. Wied’s privy council, which had existed during the days of the Principality of Albania, has once more been assembled to help advise the king and help better direct the nation. Loyal and qualified members have been chosen to join the council."
-albania.45.a:0 "This will be a great boon."
+albania.45.d:0 "현재의 공화제 제도가 역전되기 시작했기 때문에, 우리가 우리의 통치 이전에 존재했던 이전의 시설들을 위한 대체물을 찾기 시작하는 것이 중요합니다. 알바니아 공국 시대에 존재했던 비드의 관료 평의회는, 왕에게 조언하고 더 나은 국가를 지도하는것을 돕기 위해 다시 한번 모였습니다. 충성과 자격을 갖춘 회원들이 위원회에 가입하도록 선택되었습니다."
+albania.45.a:0 "이것은 큰 보탬이 될 것이다."
 
 albania.46.t:0 "카톨릭 교도에게 토지 재분배"
-albania.46.d:0 "In order to help better win over the loyalty of Albanians, and take power away from those who pose a threat to our rule, we must turn our attention the Catholics living within Albania. As it stands, those who hold power in Albania are the landowners, the majority of which are Muslim. By taking away their land, and redistributing it to the Catholics, we can better win them over. This does, of course, come with the risk of angering the aristocrats, particularly the Progressive Party."
-albania.46.a:0 "The redistribution must go forth."
+albania.46.d:0 "알바니아인들의 충성심을 더 잘 이기고, 우리 통치에 위협이 되는 세력들로부터 권력을 빼앗기 위해, 우리는 알바니아 내에 살고 있는 가톨릭 신자들의 관심을 돌려야 합니다. 현재 알바니아에서 권력을 쥐고 있는 사람들은 지주들이고, 대부분 이슬람교입니다. 그들의 땅을 빼앗고, 카톨릭 신자들에게 재분배함으로써, 우리는 그들을 더 잘 이겨낼 수 있습니다. 물론 이것은 귀족들, 특히 진보당을 화나게 할 수 있습니다."
+albania.46.a:0 "재분배는 반드시 진행되어야 한다."
 
 albania.47.t:0 "권력 강화"
-albania.47.d:0 "It is clear that we must cement our rule if we are to retain control of the ever turbulent and chaotic nation that is known as Albania. To do so, we shall shut down all organised opposition that may, in the short and long term, pose any sort of threat to us. Of course, this will most certainly not please Albanian nationalists and pro-republicans within the nation."
-albania.47.a:0 "So be it."
+albania.47.d:0 "만약 우리가 알바니아로 알려진 격동적이고 혼란스러운 국가에 대한 통제를 유지하려면 우리의 규칙을 굳건히 해야 한다는 것은 분명합니다. 그렇게 하기 위해서, 우리는 단기적으로 그리고 장기적으로 우리에게 어떤 종류의 위협을 가할지도 모르는 모든 조직화된 반대를 중단시킬 것입니다. 물론 이것은 알바니아 민족주의자들과 국내의 친 공화주의자들을 기쁘게 하지는 않을 것입니다."
+albania.47.a:0 "그러면 그렇게 하라."
 
 albania.48.t:0 "파르티잔들의 공격!"
-albania.48.d:0 "Partisans, who have not taken kindly to the current changes that we’ve made, have begun to attack various important buildings in an attempt to force us to reverse our policies. This does not come as a shock, as we’ve prepared for this eventuality, but it still sets us back."
-albania.48.a:0 "Blasted nationalists."
+albania.48.d:0 "현재의 변화에 대해 불만을 품고 있는 파르티잔들은 정책을 뒤집기 위해 여러 중요한 건물들을 공격하기 시작했습니다. 이것은 우리가 이 사건에 대해 준비해왔던 것만큼 충격으로 다가오지는 않지만, 우리를 뒤로 되돌아가게 합니다."
+albania.48.a:0 "빌어먹을 민족주의자들."
 
 albania.49.t:0 "더 많은 파르티잔들의 공격!"
-albania.49.d:0 "Partisans have continued to mercilessly attack us, this time focusing their efforts on taking out crucial supply lines which better help us equip troops so as to deal with them. This has set us back by quite a bit and will take some time to recover from."
-albania.49.a:0 "Blasted nationalists."
+albania.49.d:0 "파르티잔들은 우리를 무자비하게 공격해 왔으며, 이번에는 그들을 상대하는데 있어서 병력들에게 도움을 줄 장비들의 중요한 보급선을 제거하는데 노력을 두는것에 집중했습니다. 이것은 우리를 꽤 뒤로 되돌아가게 만들었고 회복하는데 약간의 시간이 걸릴 것입니다."
+albania.49.a:0 "빌어먹을 민족주의자들."
 
 albania.50.t:0 "파르티잔이 오스트리아계 회사를 사보타주하다"
-albania.50.d:0 "Albanian nationalists and anti-Austrians have taken to sabotaging new Austrian companies that have begun to set local branches in Albania, intending on driving away foreign businesses. This does not bode well for us."
-albnaia.50.a:0 "We must stand firm in the face of destruction."
+albania.50.d:0 "알바니아 민족주의자들과 반-오스트리아인들은 외국 기업들을 몰아내기 위해 알바니아에 현지 지사를 설립하기 시작한 새로운 오스트리아 기업들을 약탈하기 시작했습니다. 이것은 우리에게 좋은 징조가 아닙니다."
+albnaia.50.a:0 "우리는 파멸에 직면하여도 단호한 태도를 취해야 한다."
 
 albania.51.t:0 "독일 학교가 진전을 보이다"
-albania.51.d:0 "Due to pursuing our policy of instating and running German schools, alongside making sure that education within Albania, specifically with regards to the attendance of these schools, is compulsory, we have managed to lower illiteracy rates by a great amount. This will, of course, greatly assist us in our efforts in that it will help bring about a more educated, and loyal, populace."
-albania.51.a:0 "Rejoice!"
+albania.51.d:0 "독일 학교 설립 및 운영 정책을 추진함에 따라 알바니아 내에서의 교육, 특히 이들 학교의 출석과 관련된 의무 교육은 물론 문맹률을 크게 낮추는 데 기여했습니다. 물론 이것은 교육받은 충성스러운 대중을 데려오는데 도움이 될 것이라는 점에서 우리의 노력에 크게 도움이 될 것입니다."
+albania.51.a:0 "기쁘군!"
 
 albania.52.t:0 "알바니아 석유 수송"
-albania.52.d:0 "Due to our control over Albania, with the installation of William of Wied, we have managed to procure oil shipments from Albanian which will most certainly assist us economically in that it will boost our overall industrial production."
+albania.52.d:0 "알바니아에 대한 통제로 인해 윌리엄 오브 비드의 설치로 우리는 알바니아에서 석유 수송선을 조달 할 수 있었습니다. 알바니아인은 우리의 전반적인 산업 생산을 증진시킬 것이라는 점에서 우리를 경제적으로 도울 것입니다."
 albania.52.a:0 "훌륭하군."
 
 albania.53.t:0 "알바니아 석유 수송이 끝나다"
-albania.53.d:0 "As we've now lost control over Albania, with William of Wied no longer on the throne, all oil shipments have been terminated, which means we no longer receive any sort of oil from Albania. No matter how minor, this will be an economic setback."
-albania.53.a:0 "Damn..."
+albania.53.d:0 "우리가 알바니아에 대한 통제권을 상실했기 때문에, 윌리엄이 더 이상 왕위에 올라 있지 않게 되면서, 모든 석유 선적은 중단되었고, 이는 알바니아로부터 더 이상 어떤 종류의 석유도 받지 않는다는 것을 의미합니다. 아무리 사소한 것이라도 이것은 경제적인 후퇴가 될 것입니다."
+albania.53.a:0 "젠장..."
 
 albania.54.t:0 "비드 암살 시도!"
-albania.54.d:0 "We should have seen this coming with the recent reforms that have been implemented. While the partisans had only taken action against things that had directly affected Albania, such as new schools and the abolition of republican institutions, an assassin has been hired in order to take out Wied and liberate Albania from the Austrian rule. If Wied dies, this could prove to be disastrous for everybody involved!"
-albania.54.a:0 "The assassin takes the shot and..."
+albania.54.d:0 "우리는 이것이 시행된 최근의 개혁과 함께 이 사실을 알았어야 합니다. 파르티잔들이 새로운 학교와 공화당 기관의 폐지와 같은 알바니아에 직접적으로 영향을 끼친 것들에 대해서만 조치를 취한 반면, 비드를 빼내고 오스트리아의 통치에서 알바니아를 해방시키기 위해 암살자가 고용되었습니다. 비드가 죽으면, 관련된 모든 사람들에게 재앙이 될 수 있습니다!"
+albania.54.a:0 "암살자가 막 총을 쐈다. 그리고..."
 
 albania.55.t:0 "비드가 암살 당하다!"
-albania.55.d:0 "News has reached us from Albania that Wied has been killed and all of our efforts to subjugate the nation have failed, with nationalists taking matters into their own hands and seizing power! What shall we do?"
-albania.55.a:0 "We shall not stand for this!"
-albania.55.b:0 "We are not ready for war..."
+albania.55.d:0 "알바니아에서 온 소식에 의하면, 비드는 죽었고, 민족주의자들이 자신들의 손에 문제를 제기하고 권력을 장악하면서 나라를 정복하려는 우리의 모든 노력이 실패했다고 합니다. 어떻게 해야 할까요?"
+albania.55.a:0 "우리는 이것을 지지하지 않을 것이다!"
+albania.55.b:0 "우리는 전쟁을 할 준비가 되어 있지 않다..."
 
-albania.56.t:0 "Dealing With the Partisan Threat"
-albania.56.d:0 "In order to rid ourselves of the continuous attacks on various buildings, officials, and other institutions, we must turn our attention to dealing with the partisan threat that currently exists. In order to make our jobs easier, we would do well to ask the Gendarmerie to assist us in our endeavours. With all said and done, however, we have no guarantee of their acceptance..."
-albania.56.a:0 "We eagerly await their decision."
+albania.56.t:0 "파르티잔 위협의 대응"
+albania.56.d:0 "다양한 건물, 고위 공무원, 그리고 다른 기관들에 대한 끊임없는 공격을 없애기 위해, 우리는 현재 존재하는 파르티잔의 위협에 대처하는 데 관심을 돌려야 합니다. 우리의 일을 더 쉽게 하기 위해서, 우리는 우리의 노력에 도움을 줄 수 있도록 영국 왕실에 요청하는 것이 좋을 것입니다. 그러나 이렇다 할 일이 있었음에도 우리는 그들의 승낙을 보장할 수 없습니다."
+albania.56.a:0 "우리는 그들의 결정을 간절히 기다리고 있다."
 
-albania.57.t:0 "Chasing Down the Partisans"
-albania.57.d:0 "We have found trace of the partisans near key supply lines and other areas containing crucial infrastructure. While they had managed to escape before we had caught them in the act, this shows signs of good progress, and will, hopefully, lead us to them."
-albania.57.a:0 "Here's hoping."
+albania.57.t:0 "파르티잔 추격"
+albania.57.d:0 "우리는 주요 보급선과 중요한 기반 시설을 포함하고 있는 다른 지역 근처에서 파르티잔들의 흔적을 발견했습니다. 우리가 그들을 현장에서 잡기 전에 그들이 탈출했지만, 이것은 좋은 진전의 조짐을 보여 주고있고, 바라건대, 그들에게 우리를 인도할 것입니다."
+albania.57.a:0 "여기에 희망이 있다."
 
 albania.58.t:0 "계속되는 파르티잔의 공격!"
-albania.58.d:0 "Traces of partisan attacks have, yet again, been detected with more crucial supply lines and railways being destroyed or broken beyond recognition. It seems as though the hunt to chasing down these fiends will continue."
-albania.58.a:0 "No matter, they shall be found!"
+albania.58.d:0 "또 다시 파르티잔 공격의 흔적이 감지되었는데, 이는 중요한 보급로와 철도가 파괴되거나 인식할 수 없을 정도로 부서졌기 때문입니다. 이 악마들을 추격하는 사냥이 계속 될 것처럼 보입니다."
+albania.58.a:0 "상관없이, 그들은 발견될 것이다!"
 
-albania.59.t:0 "Catching the Partisans"
-albania.59.d:0 "Finally, we've managed to track down the partisans and pinpoint their location to forests hidden within Albania. It seems as though leaders who were once nationalist guerrillas have taken to attacking us. No matter, for they are now in our custody and shall be dealt with shortly."
-albania.59.a:0 "Thankfully, they're now contained."
+albania.59.t:0 "파르티잔을 붙잡다"
+albania.59.d:0 "마지막으로, 우리는 파르티잔들을 추적하여 알바니아 내에 숨겨진 숲에 그들의 위치를 정확히 찾아낼 수 있었습니다. 한 때 민족주의 게릴라였던 지도자들이 우리를 공격한 것 같습니다. 상관없이, 그들은 지금 우리에게 구속되어 있고 곧 처리될 것입니다."
+albania.59.a:0 "고맙게도, 그들은 이제 갇혔다."
 
 albania.60.t:0 "알바니아와의 무역?"
-albania.60.d:0 "Albania has just reached out to us in an attempt to foster relations and help open up trade relations between our two nations. This could certainly help us better fight off the effects of Black Monday while boosting relations between our two nations. With that in mind, we have decided to..."
+albania.60.d:0 "알바니아는 양국 간의 관계를 강화하고 교역 관계를 활성화하기 위한 노력을 막 시작했습니다. 이것은 확실히 우리가 양국 관계를 증진시키는 동시에 검은 월요일의 영향을 물리치는 데 도움이 될 것입니다. 그것을 염두에 두고 우리는... 하기로 결정했습니다."
 albania.60.a:0 "알바니아와 무역한다."
 albania.60.b:0 "알바니아와 무역을 하지않는다."
 
 albania.61.t:0 "알바니아 시칠리아 경제 협력!"
-albania.61.d:0 "Word has come that the Sicilians have decided to accept our offer of trade between Albania and the Two Sicilies, effectively ensuring better relations between our two nations while also helping spur the development of better economic ties. This will surely be a great economic boon for years to come!"
-albania.61.a:0 "A toast to our Sicilian friends!"
+albania.61.d:0 "시칠리아인들은 알바니아와 양 시칠리아간에 무역 협정을 수락하기로 결정했으며, 우리는 두나라 간의 관계를 효과적으로 유지하는 한편 검은 월요일의 영향에 더 효과적으로 대처할 수 있도록 돕고 있습니다. 이것은 확실히 앞으로 수년 동안 큰 경제적 이익이 될 것입니다!"
+albania.61.a:0 "시칠리아 친구들을 위해 건배!"
 
 albania.62.t:0 "시칠리아가 거절하였습니다"
-albania.62.d:0 "The Two Sicilies have refused our offer of economic ties between our two nations, citing the current concentration of resources to build up their nation internally and the distance between our two nations."
+albania.62.d:0 "양 시칠리아는 자국 내부적 건설을 위한 현재의 자원 집중과 양국 간 거리를 언급하면서 양국 간 경제적 유대 관계에 대한 우리의 제안을 거부했습니다."
 albania.62.a:0 "이런..."
 
 albania.63.t:0 "수력 발전"
-albania.63.d:0 "In order to increase energy within our nation, it has been suggested by leading experts that we begin to invest government funds in the creation of dams and new power plants. By harnessing the power of various rivers within our nation, such as the Drin, Buna, Vjosa, and Seemani Rivers, we can help bring affordable energy to all [Root.GetAdjective]s. It must be noted, however, that this will be a costly project."
-albania.63.a:0 "What could go wrong?"
+albania.63.d:0 "우리나라의 에너지를 증대시키기 위해 댐과 새로운 발전소 건설에 정부 기금을 투자해야 한다는 전문가들의 조언이 제기되었습니다. 드린, 부나, 비오서, 세마니와 같은 우리나라의 여러 강물의 힘을 이용하면 모든 [Root.GetAdjective]에게 저렴한 에너지를 가져올 수 있습니다. 그러나 이것이 비용이 많이 드는 프로젝트라는 점에 유의해야합니다."
+albania.63.a:0 "뭐가 잘못되겠어?"
 
 albania.64.t:0 "긴급 식량 원조"
-albania.64.d:0 "With our agricultural sector suffering due to the effects of Black Monday, it is clear that we must take steps to keep our population satisfied. The situation, as it stands, is already on the brink of destabilisation as many within our population, who are not as well off, are facing starvation and, inevitably, death. We must begin to distribute emergency food aid to these poor areas so as to remedy the situation and boost morale and the peoples’ confidence in the government."
-albania.64.a:0 "This is a necessary measure."
+albania.64.d:0 "검은 월요일의 영향으로 농업 부문이 어려움을 겪고 있는 상황에서, 우리가 우리의 인구를 만족시키기 위한 조치를 취해야 한다는 것은 분명합니다. 현 상황으로는, 우리 인구 내의 그리 부유하지 않은 많은 사람들이 기아에 직면하고 있고, 어쩔 수 없이 죽음에 직면하고 있기 때문에 상황은 이미 불안정한 상태에 있습니다. 우리는 상황을 개선하고 정부에 대한 국민들의 사기와 신뢰를 높이기 위해 이러한 가난한 지역에 긴급 식량 원조를 제공하기 시작해야 합니다."
+albania.64.a:0 "이것은 필요한 조치이다."
 
-albania.65.t:0 "Mass Rioting by the Peasantry"
-albania.65.d:0 "Because of our failure to respond to the crisis within the countryside, we have been faced with mass rioting by the peasantry. This has not helped our political position in the slightest, and has only seen the economic situation rapidly deteriorate, as a result."
-albania.65.a:0 "Dammit!"
+albania.65.t:0 "농민에 의한 대규모 폭동"
+albania.65.d:0 "시골 지역의 위기에 대처하는데 실패했기 때문에, 우리는 농민들에 의한 대규모 폭동에 직면했습니다. 이것은 우리의 정치적 입장에 조금도 도움이 되지 않았으며, 결과적으로 경제 상황이 급속히 악화되는 것을 보았을 뿐입니다."
+albania.65.a:0 "젠장할!"
 
-albania.66.t:0 "Join [ALB.GetName] in Their War against [BUL.GetName]?"
-albania.66.d:0 "It seems as though the [ALB.GetAdjective]s have begun their campaign of retaking Macedonia, a territory that contains a sizable [ALB.GetAdjective] population, from [BUL.GetName] and have requested that we, as their allies, intervene. While this could prove advantageous in that we have our own interests in [BUL.GetName], being on the losing side of a war is the last thing the [Root.GetAdjective] people desire. What shall we do?"
-albania.66.a:0 "We shall join our gallant [ALB.GetAdjective] allies!"
-albania.66.b:0 "We must decline such an offer."
+albania.66.t:0 "[BUL.GetName]와 싸우고 있는 [ALB.GetName]에 가입?"
+albania.66.d:0 "[ALB.GetAdjective]가 [BUL.GetName]의 상당한 [ALB.GetAdjective] 인구를 포함하고있는 마케도니아를 다시 찾겠다는 캠페인을 시작한 것처럼 보이며 우리 또한 동맹국으로서 개입할 것을 요청했습니다. 이것은 [BUL.GetName]에 우리 자신의 이익이 있다는 점에서 유리할 수 있지만, 전쟁에서 지는 쪽에 있는것이 [Root.GetAdjective] 사람들이 원하는 마지막 것입니다. 우리는 무엇을 해야 할까요?"
+albania.66.a:0 "우리는 우리의 용감한 [ALB.GetAdjective] 동맹들과 함께 할 것이다!"
+albania.66.b:0 "우리는 그러한 제의를 거절해야 한다."
 
-albania.67.t:0 "Join [ALB.GetName] in Their War against [GRE.GetName]?"
-albania.67.d:0 "It seems as though the [ALB.GetAdjective]s have begun their campaign of retaking Chameria, a territory that contains a sizable [ALB.GetAdjective] population, from [GRE.GetName] and have requested that we, as their allies, intervene. While this could prove advantageous in that we have our own interests in [GRE.GetName], being on the losing side of a war is the last thing the [Root.GetAdjective] people desire. What shall we do?"
-albania.67.a:0 "We shall join our gallant [ALB.GetAdjective] allies!"
-albania.67.b:0 "We must decline such an offer."
+albania.67.t:0 "[GRE.GetName]와 싸우고 있는 [ALB.GetName]에 가입?"
+albania.67.d:0 "[ALB.GetAdjective]가 [GRE.GetName]의 상당한 [ALB.GetAdjective] 인구를 포함하고있는 차메리아를 다시 찾겠다는 캠페인을 시작한 것처럼 보이며 우리 또한 동맹국으로서 개입할 것을 요청했습니다. 이것은 [GRE.GetName]에 우리 자신의 이익이 있다는 점에서 유리할 수 있지만, 전쟁에서 지는 쪽에 있는것이 [Root.GetAdjective] 사람들이 원하는 마지막 것입니다. 우리는 무엇을 해야 할까요?"
+albania.67.a:0 "우리는 우리의 용감한 [ALB.GetAdjective] 동맹들과 함께 할 것이다!"
+albania.67.b:0 "우리는 그러한 제의를 거절해야 한다."
 
 ### Focuses ###
 ALB_aftermath_of_black_monday:0 "검은 월요일의 여파"
